--- a/Source/Mosa.Workspace.UnitTest.Debug/Mosa.Workspace.UnitTest.Debug.csproj
+++ b/Source/Mosa.Workspace.UnitTest.Debug/Mosa.Workspace.UnitTest.Debug.csproj
@@ -57,6 +57,10 @@
       <Project>{b0776c9d-7f3d-4e6e-8c5d-5f735326c7d7}</Project>
       <Name>Mosa.UnitTest.Engine</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mosa.UnitTest.Numbers\Mosa.UnitTest.Numbers.csproj">
+      <Project>{ad653b6b-ebc7-4e69-93f7-fada40462648}</Project>
+      <Name>Mosa.UnitTest.Numbers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mosa.Utility.Launcher\Mosa.Utility.Launcher.csproj">
       <Project>{b69c2f31-5161-47aa-9fd3-2f2f2bccf659}</Project>
       <Name>Mosa.Utility.Launcher</Name>
