- New UnitTest system [incomplete]

--- a/Source/Mosa.Workspace.UnitTest.Debug/Mosa.Workspace.UnitTest.Debug.csproj
+++ b/Source/Mosa.Workspace.UnitTest.Debug/Mosa.Workspace.UnitTest.Debug.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateParameters.cs" />
     <Compile Include="UnitTestHelper.cs" />
     <Compile Include="UnitTest.cs" />
     <Compile Include="UnitTests.cs" />
