--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Intrinsics\GetStringType.cs" />
     <Compile Include="Intrinsics\GetDelegateTargetAddress.cs" />
     <Compile Include="Intrinsics\GetDelegateMethodAddress.cs" />
+    <Compile Include="Intrinsics\LoadPointer.cs" />
     <Compile Include="Intrinsics\Load.cs" />
     <Compile Include="Intrinsics\Store.cs" />
     <Compile Include="IR\Add32.cs">
