--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Intrinsics\LoadPointer.cs" />
     <Compile Include="Intrinsics\Load.cs" />
     <Compile Include="Intrinsics\Store.cs" />
+    <Compile Include="Intrinsics\StoreR8.cs" />
+    <Compile Include="Intrinsics\StoreR4.cs" />
     <Compile Include="IR\Add32.cs">
       <DependentUpon>IRInstructions.tt</DependentUpon>
     </Compile>
