- Migrating pointer logic to UIntPTr

--- a/Source/Mosa.UnitTest.Collection/Mosa.UnitTest.Collection.csproj
+++ b/Source/Mosa.UnitTest.Collection/Mosa.UnitTest.Collection.csproj
@@ -28,11 +28,11 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <NoStdLib>false</NoStdLib>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
-    <NoWarn>168,162</NoWarn>
+    <NoWarn>168,162,0649</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
