--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -743,7 +743,6 @@
     <Compile Include="Stages\DevirtualizeCallStage.cs" />
     <Compile Include="Stages\CallStage.cs" />
     <Compile Include="Stages\BlockMergeStage.cs" />
-    <Compile Include="Stages\PromoteStructToRegister.cs" />
     <Compile Include="Stages\IRLongDecomposeStage.cs" />
     <Compile Include="Stages\LowerIRStage.cs" />
     <Compile Include="Analysis\LiveVariableAnalysis\LivenessAnalysis.cs" />
@@ -753,6 +752,7 @@
     <Compile Include="Stages\InlineStage.cs" />
     <Compile Include="Stages\InlineEvaluationStage.cs" />
     <Compile Include="Stages\IRCleanupStage.cs" />
+    <Compile Include="Stages\PromoteTemporaryVariables.cs" />
     <Compile Include="Stages\SparseConditionalConstantPropagationStage.cs" />
     <Compile Include="CompilerStages\MethodExceptionLookupTableStage.cs" />
     <Compile Include="CompilerStages\MethodLookupTableStage.cs" />
