- Renamed CodeDomcompiler to CodeCompiler

--- a/Source/Mosa.Tool.Explorer/Mosa.Tool.Explorer.csproj
+++ b/Source/Mosa.Tool.Explorer/Mosa.Tool.Explorer.csproj
@@ -137,7 +137,7 @@
       <Project>{DE30CBE9-50F3-4A3E-BCC9-A8A36348530E}</Project>
       <Name>Mosa.Platform.x86</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mosa.Utility.CodeDomCompiler\Mosa.Utility.CodeCompiler.csproj">
+    <ProjectReference Include="..\Mosa.Utility.CodeCompiler\Mosa.Utility.CodeCompiler.csproj">
       <Project>{7b8fba4e-d6ac-4dad-a607-43ba112f8ec1}</Project>
       <Name>Mosa.Utility.CodeCompiler</Name>
     </ProjectReference>
