--- a/Source/Mosa.Tool.CreateBootImage/packages.config
+++ b/Source/Mosa.Tool.CreateBootImage/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="CommandLineParser" version="2.2.1" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
-  <package id="System.Console" version="4.3.0" targetFramework="net461" />
+  <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.IO" version="4.3.0" targetFramework="net461" />
@@ -10,7 +10,7 @@
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection.TypeExtensions" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Reflection.TypeExtensions" version="4.5.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
