--- a/Source/Mosa.Workspace.UnitTest.Debug/Mosa.Workspace.UnitTest.Debug.csproj
+++ b/Source/Mosa.Workspace.UnitTest.Debug/Mosa.Workspace.UnitTest.Debug.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UnitTestEngineV2.cs" />
     <Compile Include="UnitTestHelper.cs" />
     <Compile Include="UnitTest.cs" />
     <Compile Include="UnitTestSystem.cs" />
@@ -52,17 +53,29 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Mosa.Compiler.Linker\Mosa.Compiler.Linker.csproj">
+      <Project>{65866A51-B229-44C5-AC81-87A90FA1741C}</Project>
+      <Name>Mosa.Compiler.Linker</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mosa.Compiler.MosaTypeSystem\Mosa.Compiler.MosaTypeSystem.csproj">
+      <Project>{5F30A68E-05BF-40EA-B576-5EBCDE520559}</Project>
+      <Name>Mosa.Compiler.MosaTypeSystem</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mosa.UnitTest.Collection\Mosa.UnitTest.Collection.csproj">
       <Project>{067aab6b-447a-45ba-9e0d-dfea886b4f69}</Project>
       <Name>Mosa.UnitTest.Collection</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Mosa.UnitTest.Engine\Mosa.UnitTest.Engine.csproj">
-      <Project>{b0776c9d-7f3d-4e6e-8c5d-5f735326c7d7}</Project>
-      <Name>Mosa.UnitTest.Engine</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Mosa.UnitTest.Numbers\Mosa.UnitTest.Numbers.csproj">
       <Project>{ad653b6b-ebc7-4e69-93f7-fada40462648}</Project>
       <Name>Mosa.UnitTest.Numbers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mosa.Utility.BootImage\Mosa.Utility.BootImage.csproj">
+      <Project>{65F7691A-B355-4D98-BB97-0B19F13E2190}</Project>
+      <Name>Mosa.Utility.BootImage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mosa.Utility.DebugEngine\Mosa.Utility.DebugEngine.csproj">
+      <Project>{5B810793-78E2-413C-AA05-FCDD12B7DB04}</Project>
+      <Name>Mosa.Utility.DebugEngine</Name>
     </ProjectReference>
     <ProjectReference Include="..\Mosa.Utility.Launcher\Mosa.Utility.Launcher.csproj">
       <Project>{b69c2f31-5161-47aa-9fd3-2f2f2bccf659}</Project>
