- Updated plug system

--- a/Source/CodeMaid.config
+++ b/Source/CodeMaid.config
@@ -381,7 +381,7 @@
                 <value>True</value>
             </setting>
             <setting name="Cleaning_RemoveEndOfFileTrailingNewLine" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Digging_PrimarySortOrder" serializeAs="String">
                 <value>0</value>
