--- a/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
+++ b/Source/Mosa.Compiler.Framework/Mosa.Compiler.Framework.csproj
@@ -707,7 +707,6 @@
     <Compile Include="InstructionSize.cs" />
     <Compile Include="Intrinsics\GetObjectAddress.cs" />
     <Compile Include="Intrinsics\InternalsForObject.cs" />
-    <Compile Include="Intrinsics\InternalsForRuntimeHelpers.cs" />
     <Compile Include="Intrinsics\Load32.cs" />
     <Compile Include="Intrinsics\IntrinsicsHelper.cs" />
     <Compile Include="Intrinsics\InternalsForType.cs" />
@@ -718,6 +717,7 @@
     </Compile>
     <Compile Include="Platform\BaseOpcodeEncoder.cs" />
     <Compile Include="Platform\OpcodeEncoder.cs" />
+    <Compile Include="PlugSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterAllocator\BasicRegisterAllocator.cs" />
     <Compile Include="RegisterAllocator\MoveExtended.cs" />
@@ -740,6 +740,7 @@
     <Compile Include="RegisterAllocator\VirtualRegister.cs" />
     <Compile Include="RegisterAllocator\GreedyRegisterAllocator.cs" />
     <Compile Include="CompilerStages\DebugFileGenerationStage.cs" />
+    <Compile Include="Stages\PlugStage.cs" />
     <Compile Include="Stages\DevirtualizeCallStage.cs" />
     <Compile Include="Stages\CallStage.cs" />
     <Compile Include="Stages\BlockMergeStage.cs" />
@@ -773,7 +774,6 @@
     <Compile Include="Analysis\LoopAwareBlockOrder.cs" />
     <Compile Include="CompilationScheduler.cs" />
     <Compile Include="Stages\PlatformIntrinsicStage.cs" />
-    <Compile Include="PlugSystem.cs" />
     <Compile Include="Stages\BlockOrderingStage.cs" />
     <Compile Include="Stages\IROptimizationStage.cs" />
     <Compile Include="Stages\EdgeSplitStage.cs" />
@@ -806,7 +806,6 @@
     <Compile Include="BaseCompilerStage.cs" />
     <Compile Include="Platform\BasePlatformInstruction.cs" />
     <Compile Include="Platform\BasePlatformTransformationStage.cs" />
-    <Compile Include="CompilerStages\PlugStage.cs" />
     <Compile Include="Stages\CILProtectedRegionStage.cs" />
     <Compile Include="CompilerStages\MetadataStage.cs" />
     <Compile Include="Stages\EnterSSAStage.cs" />
