- Additional IntPtr work

--- a/Source/Mosa.Runtime/Mosa.Runtime.csproj
+++ b/Source/Mosa.Runtime/Mosa.Runtime.csproj
@@ -90,7 +90,7 @@
     <Compile Include="InternalsForObject.cs" />
     <Compile Include="InternalsForType.cs" />
     <Compile Include="Intrinsic.cs" />
-    <Compile Include="Plug\MethodAttribute.cs" />
+    <Compile Include="Plug\PlugAttribute.cs" />
     <Compile Include="Internal.cs" />
     <Compile Include="SimpleStackTraceEntry.cs" />
   </ItemGroup>
