--- a/Source/Mosa.Korlib/Mosa.Korlib.csproj
+++ b/Source/Mosa.Korlib/Mosa.Korlib.csproj
@@ -103,6 +103,7 @@
     <Compile Include="System.Threading\Monitor.cs" />
     <Compile Include="System.Threading\Thread.cs" />
     <Compile Include="System.Threading\SpinLock.cs" />
+    <Compile Include="System\ConsoleColor.cs" />
     <Compile Include="System\PlatformNotSupportedException.cs" />
     <Compile Include="System\Action.cs" />
     <Compile Include="System\Activator.cs" />
