--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -80,6 +80,9 @@
     <Compile Include="DebugData\ParameterInfo.cs" />
     <Compile Include="DebugData\MethodInfo.cs" />
     <Compile Include="DebugData\FieldInfo.cs" />
+    <Compile Include="DebugData\SourceFileInfo.cs" />
+    <Compile Include="DebugData\SourceLabelInfo.cs" />
+    <Compile Include="DebugData\SourceInfo.cs" />
     <Compile Include="DebugData\TypeInfo.cs" />
     <Compile Include="DebugAppLocationsWindow.cs">
       <SubType>Form</SubType>
@@ -87,6 +90,8 @@
     <Compile Include="DebugAppLocationsWindow.Designer.cs">
       <DependentUpon>DebugAppLocationsWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Debug\Source.cs" />
+    <Compile Include="Debug\SourceLocation.cs" />
     <Compile Include="GDB\MemoryCache.cs" />
     <Compile Include="Views\BreakpointView.cs">
       <SubType>Form</SubType>
