--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -111,6 +111,12 @@
     <Compile Include="Views\DisplayView.designer.cs">
       <DependentUpon>DisplayView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\SourceDataView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SourceDataView.designer.cs">
+      <DependentUpon>SourceDataView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\SourceView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -268,6 +274,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\DisplayView.resx">
       <DependentUpon>DisplayView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SourceDataView.resx">
+      <DependentUpon>SourceDataView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\SourceView.resx">
       <DependentUpon>SourceView.cs</DependentUpon>
