--- a/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
+++ b/Source/Mosa.Tool.GDBDebugger/Mosa.Tool.GDBDebugger.csproj
@@ -80,6 +80,9 @@
     <Compile Include="DebugData\ParameterInfo.cs" />
     <Compile Include="DebugData\MethodInfo.cs" />
     <Compile Include="DebugData\FieldInfo.cs" />
+    <Compile Include="DebugData\SourceFileInfo.cs" />
+    <Compile Include="DebugData\SourceLabelInfo.cs" />
+    <Compile Include="DebugData\SourceInfo.cs" />
     <Compile Include="DebugData\TypeInfo.cs" />
     <Compile Include="DebugAppLocationsWindow.cs">
       <SubType>Form</SubType>
@@ -87,6 +90,8 @@
     <Compile Include="DebugAppLocationsWindow.Designer.cs">
       <DependentUpon>DebugAppLocationsWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="DebugData\Source.cs" />
+    <Compile Include="DebugData\SourceLocation.cs" />
     <Compile Include="GDB\MemoryCache.cs" />
     <Compile Include="Views\BreakpointView.cs">
       <SubType>Form</SubType>
@@ -105,6 +110,18 @@
     </Compile>
     <Compile Include="Views\DisplayView.designer.cs">
       <DependentUpon>DisplayView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SourceDataView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SourceDataView.designer.cs">
+      <DependentUpon>SourceDataView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SourceView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SourceView.designer.cs">
+      <DependentUpon>SourceView.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\MethodView.cs">
       <SubType>Form</SubType>
@@ -257,6 +274,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\DisplayView.resx">
       <DependentUpon>DisplayView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SourceDataView.resx">
+      <DependentUpon>SourceDataView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\SourceView.resx">
+      <DependentUpon>SourceView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MethodView.resx">
       <DependentUpon>MethodView.cs</DependentUpon>
