--- a/Source/Mosa.Utility.SourceCodeGenerator/Mosa.Utility.SourceCodeGenerator.csproj
+++ b/Source/Mosa.Utility.SourceCodeGenerator/Mosa.Utility.SourceCodeGenerator.csproj
@@ -48,8 +48,10 @@
     <Compile Include="BuildARMv6.cs" />
     <Compile Include="BuildARMv6Instructions.cs" />
     <Compile Include="BuildARMv6InstructionFiles.cs" />
+    <Compile Include="BuildRuleFiles.cs" />
     <Compile Include="BuildX64InstructionFiles.cs" />
     <Compile Include="BuildX64.cs" />
+    <Compile Include="BuildRules.cs" />
     <Compile Include="BuildX64Instructions.cs" />
     <Compile Include="BuildX86InstructionFiles.cs" />
     <Compile Include="BuildX86Instructions.cs" />
@@ -59,7 +61,7 @@
     <Compile Include="BuildIRInstructions.cs" />
     <Compile Include="BuildBaseTemplate.cs" />
     <Compile Include="DynamicJsonConverter.cs" />
-    <Compile Include="GenerateInstructionID.cs" />
+    <Compile Include="Identifiers.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
